# harvestlynk

./: .gitignore  README.md
ai_crop_handler/: README.md
backend/: Dockerfile  data.py  main.py  pyproject.toml  requirements.txt
backend-express/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
backend-express/drizzle/: 0000_sad_iron_monger.sql  0001_woozy_rafael_vega.sql  0002_puzzling_catseye.sql  0003_wooden_mojo.sql  0004_nomba_integration.sql  0005_optional_payout_order_id.sql  0006_virtual_accounts.sql  0007_money_ledger_foundation.sql  0008_order_state_machine.sql
backend-express/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
backend-express/scripts/: list_nomba_banks.mjs
backend-express/src/: app.ts  index.ts
backend-express/src/controllers/: auth.controller.ts  marketplace.controller.ts  notifications.controller.ts  orders.controller.ts  payments.controller.ts  ratings.controller.ts  scans.controller.ts  users.controller.ts  virtual-accounts.controller.ts  wallet.controller.ts
backend-express/src/db/: index.ts  schema.ts
backend-express/src/middleware/: auth.ts  cors.ts  rateLimiter.ts
backend-express/src/routes/: auth.ts  marketplace.ts  (+5 more)
backend/models/: centroids_and_threshold.pkl  plant_disease_model.tflite
backend/prisma/: schema.prisma
dashboard/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
landing-page/: README.md  package.json  pnpm-lock.yaml
(+84 files in other folders)
