[project]
name = "alex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.28",
    "tensorflow-cpu>=2.21.0",
    "uvicorn>=0.46.0",
]
